--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
   ============================-->
   <section id="intro">
     <div class="intro-container wow fadeIn">
-      <h1 class="mb-4 pb-0">Code |<br><span>Compete |</span> Conquer...|</h1>
-      <p class="mb-4 pb-0">9-11 April 2021, St. John Campus, Palghar Maharashtra</p>
+      <h1 class="mb-4 pb-0">Code |<br><span>Compete |</span> Conquer</h1>
+      <p class="mb-4 pb-0">9-11 April 2021, St. John College of Engineering and Management, Palghar Maharashtra</p>
       <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video"
         data-autoplay="true"></a>
       <div class="container" style="margin-top: 30px;">
@@ -86,15 +86,12 @@
           <div class="col-lg-4 col-md-3 col-sm-12">
             <a href="#about" class="about-btn scrollto">Code Of Conduct</a>
           </div>
-          <div class="col-lg-4 col-md-3 col-sm-12">
-            <a href="#about" class="about-btn scrollto">About The Event</a>
+          <div class="col-lg-12 col-md-12 col-sm-12">
+            <a href="#about" class="about-btn scrollto">MegaHack 2.0 Rules</a>
           </div>
           <div class="col-lg-4 col-md-3 col-sm-12">
             <a href="#about" class="about-btn scrollto">About The Event</a>
           </div>
-    </div>
-    <div class="col-lg-12 col-md-12 col-sm-12">
-      <a href="#about" class="about-btn scrollto">MegaHack 2.0 Rules</a>
     </div>
     </div>
     </div>
@@ -114,7 +111,7 @@
           </div>
           <div class="col-lg-3">
             <h3>Where</h3>
-            <p>St. John College of Engineering and Management<br><br> Palghar, Maharashtra</p>
+            <p>Online | St. John College of Engineering and Management<br><br> Palghar, Maharashtra</p>
           </div>
           <div class="col-lg-3">
             <h3>When</h3>
@@ -613,11 +610,11 @@
       <div class="container">
 
         <div class="section-header">
-          <h2>F.A.Q </h2>
+          <h2>F.A.Q's</h2>
         </div>
 
-        <div class="row justify-content-center">
-          <div class="col-lg-9">
+        <div class="row">
+          <div class="col-lg-6">
               <ul id="faq-list">
 
                 <li>
@@ -714,7 +711,8 @@
                     </p>
                   </div>
                 </li>
-
+                </div>
+            <div class="col-lg-6">
                 <li>
                   <a data-toggle="collapse" href="#faq10" class="collapsed">How many members are required in a team?
                     <i class="fa fa-minus-circle"></i></a>
@@ -810,7 +808,6 @@
       
               </ul>
           </div>
-        </div>
 
       </div>
 
