--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div id="logo" class="pull-left">
         <!-- Uncomment below if you prefer to use a text logo -->
         <!-- <h1><a href="#main">C<span>o</span>nf</a></h1>-->
-        <a href="#intro" class="scrollto"><img src="img/Landscape megahack.png" alt="" title="" style="height:150px; width:105px;"></a>
+        <a href="#intro" class="scrollto"><img src="img/Landscape megahack.png" alt="" title="" style="height:400px; width:100px;"></a>
       </div>
 
       <nav id="nav-menu-container">
@@ -77,8 +77,8 @@
   ============================-->
   <section id="intro">
     <div class="intro-container wow fadeIn">
-      <h1 class="mb-4 pb-0">Code |<br><span>Compete |</span> Conquer</h1>
-      <p class="mb-4 pb-0">9-11 April 2021, St. John College of Engineering and Management, Palghar Maharashtra</p>
+      <h1 class="mb-4 pb-0">Code |<br><span>Compete |</span> Conquer...|</h1>
+      <p class="mb-4 pb-0">9-11 April 2021, St. John Campus, Palghar Maharashtra</p>
       <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video"
         data-autoplay="true"></a>
       <div class="container" style="margin-top: 30px;">
@@ -86,12 +86,15 @@
           <div class="col-lg-4 col-md-3 col-sm-12">
             <a href="#about" class="about-btn scrollto">Code Of Conduct</a>
           </div>
-          <div class="col-lg-12 col-md-12 col-sm-12">
-            <a href="#about" class="about-btn scrollto">MegaHack 2.0 Rules</a>
+          <div class="col-lg-4 col-md-3 col-sm-12">
+            <a href="#about" class="about-btn scrollto">About The Event</a>
           </div>
           <div class="col-lg-4 col-md-3 col-sm-12">
             <a href="#about" class="about-btn scrollto">About The Event</a>
           </div>
+    </div>
+    <div class="col-lg-12 col-md-12 col-sm-12">
+      <a href="#about" class="about-btn scrollto">MegaHack 2.0 Rules</a>
     </div>
     </div>
     </div>
@@ -111,7 +114,7 @@
           </div>
           <div class="col-lg-3">
             <h3>Where</h3>
-            <p>Online | St. John College of Engineering and Management<br><br> Palghar, Maharashtra</p>
+            <p>St. John College of Engineering and Management<br><br> Palghar, Maharashtra</p>
           </div>
           <div class="col-lg-3">
             <h3>When</h3>
@@ -610,11 +613,11 @@
       <div class="container">
 
         <div class="section-header">
-          <h2>F.A.Q's</h2>
+          <h2>F.A.Q </h2>
         </div>
 
-        <div class="row">
-          <div class="col-lg-6">
+        <div class="row justify-content-center">
+          <div class="col-lg-9">
               <ul id="faq-list">
 
                 <li>
@@ -711,8 +714,7 @@
                     </p>
                   </div>
                 </li>
-                </div>
-            <div class="col-lg-6">
+
                 <li>
                   <a data-toggle="collapse" href="#faq10" class="collapsed">How many members are required in a team?
                     <i class="fa fa-minus-circle"></i></a>
@@ -808,6 +810,7 @@
       
               </ul>
           </div>
+        </div>
 
       </div>
 
