--- a/index.html
+++ b/index.html
@@ -77,24 +77,21 @@
   ============================-->
   <section id="intro">
     <div class="intro-container wow fadeIn">
-      <h1 class="mb-4 pb-0">Code |<br><span>Compete |</span> Conquer...|</h1>
-      <p class="mb-4 pb-0">9-11 April 2021, St. John Campus, Palghar Maharashtra</p>
+      <h1 class="mb-4 pb-0">Code |<br><span>Compete |</span> Conquer</h1>
+      <p class="mb-4 pb-0">9-11 April 2021, St. John College Of Engineering and Management, Palghar, Maharashtra</p>
       <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video"
         data-autoplay="true"></a>
       <div class="container" style="margin-top: 30px;">
         <div class="row">
           <div class="col-lg-4 col-md-3 col-sm-12">
-            <a href="#about" class="about-btn scrollto">Code Of Conduct</a>
+            <a href="#" class="about-btn scrollto">Code Of Conduct</a>
           </div>
           <div class="col-lg-4 col-md-3 col-sm-12">
-            <a href="#about" class="about-btn scrollto">About The Event</a>
+            <a href="#" class="about-btn scrollto">View Poster</a>
           </div>
           <div class="col-lg-4 col-md-3 col-sm-12">
-            <a href="#about" class="about-btn scrollto">About The Event</a>
+            <a href="#" class="about-btn scrollto">About The Event</a>
           </div>
-    </div>
-    <div class="col-lg-12 col-md-12 col-sm-12">
-      <a href="#about" class="about-btn scrollto">MegaHack 2.0 Rules</a>
     </div>
     </div>
     </div>
@@ -114,11 +111,11 @@
           </div>
           <div class="col-lg-3">
             <h3>Where</h3>
-            <p>St. John College of Engineering and Management<br><br> Palghar, Maharashtra</p>
+            <p>Online | St. John College of Engineering and Management<br> Palghar, Maharashtra</p>
           </div>
           <div class="col-lg-3">
             <h3>When</h3>
-            <p>24 hour Hackathon<br><br>9-11 April 2021</p>
+            <p>24 hour Hackathon<br>9-11 April 2021</p>
           </div>
         </div>
       </div>
@@ -501,7 +498,7 @@
         <div class="row" style="text-align: center;">
       <div class="col-lg-6 col-md-4 col-xs-6">
         <div>
-          <img src="img/aldel.png" style="align-items: center; width:200px; height: 150px;" class="img-fluid" alt="">
+          <img src="img/aldel.png" style="align-items: center; width:175px; height: 150px;" class="img-fluid" alt="">
         <p style="text-align: center; margin-top: 25px;">"To impart quality professional education with conducive environment for technology enabled teaching-learning and to nurture socially responsible professionals with enhanced employability skills" </p>
         </div>
       </div>
