--- a/index.html
+++ b/index.html
@@ -999,7 +999,7 @@
         &copy; Copyright <strong>MegaHack 2.0</strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by
+        Designed by MegaHack Web Development Team 
       </div>
     </div>
   </footer><!-- #footer -->
